# traceroot

./: .dockerignore  .env.development  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .style.yapf  AGENTS.md  COMMIT_MSG  CONTRIBUTING.md  Coastfile  INCIDENT_RESPONSE.md  LICENSE  Makefile  PR_BODY.md  README.ja.md  README.ko.md  README.md  README.zh.md  SECURITY.md  THREAT_MODEL.md  coverage-backend.xml  docker-compose.prod.yml  docker-compose.yml  docs_rendered.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tatus  verify_session.py
.claude/: settings.json
.claude/hooks/: lint.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: _docker-images-custom.yml  announce-release-discord.yml  build-test.yml  claude-code-review.yml  dependency-review.yml  docker-images.yml  lint.yml  scorecard.yml  test.yml  traceroot-cli-ci.yml
backend/rest/: main.py  openapi_public.py  projection.py  rate_limit.py  retention.py  sql_utils.py  url_utils.py
backend/scripts/: export_openapi.py
backend/shared/: config.py  datetime_utils.py  enums.py  redis.py  span_attributes.py
backend/tests/: test_trace_reader.py
backend/worker/: budget_alerts.py  celery_app.py  detector_tasks.py  detector_transform.py  ingest_tasks.py  otel_transform.py  tasks.py  transformer.py
common/models/: __init__.py  organization.py
db/clickhouse/: client.py
db/postgres/: __init__.py  api_key.py  engine.py  membership.py  models.py  organization.py  project.py  user.py
deploy/: README.md
deploy/helm/: Chart.yaml  values.production.yaml  values.staging.yaml  values.yaml
deploy/terraform/: .gitignore
dev_docs/plans/: 2026-03-30-ts-sdk-ux-design.md
docker/: Dockerfile.agent  Dockerfile.billing  Dockerfile.detector  Dockerfile.migrate-clickhouse  Dockerfile.migrate-postgres  Dockerfile.rest  Dockerfile.web  Dockerfile.worker
docker/public/: .dockerignore  Dockerfile
docs/: docs.json  quickstart.mdx  style.css
docs/ai-agent/: byok.mdx  github-integration.mdx  overview.mdx  pr-creation.mdx  root-cause-analysis.mdx  trace-analysis.mdx
docs/api-reference/: authentication.mdx  introduction.mdx  openapi.json
docs/cli/: commands.mdx  get-started.mdx  introduction.mdx
docs/detectors/: alerts.mdx  get-started.mdx  introduction.mdx
docs/developer/: cli-public-api.mdx  self-hosting.mdx
docs/examples/: multi_code_agent.mdx  python_examples.mdx
docs/getting-started/: introduction.mdx  quickstart.mdx
docs/integrations/: agno.mdx  anthropic.mdx  autogen.mdx  claude-agent-sdk.mdx  crewai.mdx  dspy.mdx  gemini.mdx  google-adk.mdx  groq.mdx  internal-models.mdx  langchain-deepagents.mdx  langchain.mdx  llamaindex.mdx  mastra.mdx  microsoft-agent-framework.mdx  mistral.mdx  openai-agents-sdk.mdx  openai.mdx  openrouter.mdx  overview.mdx  pi.mdx  pydantic-ai.mdx  vercel-ai.mdx
docs/sdk/: python.mdx
docs/specs/: 2026-02-19-ai-assistant-mvp-design.md  2026-02-19-ai-assistant-mvp-plan.md
docs/tracing/: cost-tracking.mdx  get-started.mdx  git-context.mdx  introduction.mdx  live-streaming.mdx  manual-spans.mdx  metadata.mdx  openinference.mdx  overview.mdx  python-sdk.mdx  sessions.mdx  tags.mdx  timeline.mdx  typescript-sdk.mdx  users.mdx
ee/: LICENSE  __init__.py  license.py
ee/routers/: __init__.py
ee/tests/: test_license.py
examples/: .traceroot-config.yaml  agent_workflow_example.py
examples/anthropic-tool-agent/: README.md  env.example  main.py  requirements.txt
examples/langgraph-code-agent/: README.md  agent.py  requirements.txt
examples/openai-tool-agent/: .env.example  README.md  main.py  requirements.txt
examples/python/: loop_example.py  override_example.py  simple_example.py
examples/typescript/: .gitignore
frontend/: .prettierignore  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/ui/: .env.example  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/worker/: package.json  tsconfig.json  vitest.config.ts
rest/: app.py  constants.py  main.py  rest_types.py  typing.py
rest/agent/: README_WORKFLOW.md  __init__.py  agent.py  chat.py  github_tools.py  router.py  workflow.py
rest/cache/: __init__.py  backend.py  config.py  manager.py  types.py
rest/client/: github_client.py  mongodb_client.py  sqlite_client.py
rest/config/: __init__.py  api_keys.py  chat.py  common.py  log.py  organizations.py  traces.py  workflow.py
rest/dao/: mongodb_dao.py  sqlite_dao.py
rest/driver/: __init__.py  chat_logic.py  telemetry_logic.py
rest/routers/: api_keys.py  chat.py  deps.py  explore.py  integrate.py  organizations.py  projects.py  telemetry.py  traces.py  users.py  verify.py  workflow.py
rest/service/: provider.py
rest/services/: s3.py  trace_reader.py
rest/tests/: test_traces.py
rest/tools/: github.py
rest/utils/: importer.py  log.py  pagination.py  provider.py  trace.py  trace_cache.py  trace_query.py
scripts/: bootstrap_dev_tools.py  build_images.sh  dump_public_openapi.py  install_tools.py  make_tasks.py  start_release.sh  sync_public_openapi.py
terraform/aws/: eks.tf  (+6 more)
tests/: conftest.py  test_trace_span_ordering.py
tmux_tools/: __init__.py  default.conf  launcher.py  process.py  schema.py  tmux.py
traceroot-cli/: README.md  eslint.config.mjs  openapi.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
traceroot-py/: README.md  pyproject.toml
traceroot-py/tests/: test_auto_instrumentation.py  test_core_sdk.py  test_otel.py  test_serialize.py  utils.py
traceroot-py/traceroot/: __init__.py  client.py  constants.py  context.py  decorators.py  env.py  git_context.py  span_attributes.py  update.py  utils.py
traceroot-py/traceroot/instrumentation/: __init__.py  registry.py
traceroot-py/traceroot/transport/: __init__.py  span_processor.py
ui/: .env.example  .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
worker/: celery_app.py  tasks.py  transformer.py
(+1317 files in other folders)
