[project]
name = "traceroot-platform"
version = "0.1.0"
description = "Traceroot - AI Observability Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "cuid2>=2.0.0",
    # Database (PostgreSQL access moved to Prisma in ui/)
    "clickhouse-connect>=0.7",
    "boto3>=1.34",
    # REST API
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
    # OpenTelemetry
    "protobuf>=4.0",
    "opentelemetry-proto>=1.20.0",
    # Task Queue
    "celery[redis]>=5.3",
    "redis>=5.0",
    # Utils
    "python-dotenv>=1.0",
    "httpx>=0.28.1",
    # Tokenization
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/db", "backend/rest", "backend/worker", "tmux_tools", "devserver"]

[tool.uv.workspace]
members = [
    "traceroot-py",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["db", "rest", "worker"]
