[project]
name = "traceroot-platform"
version = "0.1.0"
description = "TraceRoot - AI Observability Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cuid2>=2.0.0",
    # Database (PostgreSQL access moved to Prisma in ui/)
    "clickhouse-connect>=0.7",
    "boto3>=1.34",
    # REST API
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.26",
    # OpenTelemetry
    "protobuf>=6.33.5",
    "opentelemetry-proto>=1.20.0",
    # Task Queue
    "celery[redis]>=5.3",
    "redis>=5.0",
    # Utils
    "python-dotenv>=1.0",
    "watchfiles>=0.21",
    "httpx>=0.28.1",
    # Tokenization
    "tiktoken>=0.5.0",
    # PostgreSQL (for standard model pricing lookup)
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "pre-commit>=4.0",
    "respx>=0.20",
    "ruff>=0.15.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/db", "backend/rest", "backend/worker", "tmux_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short -ra"
pythonpath = ["backend"]

[tool.coverage.run]
source = ["backend"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
sort = "cover"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line-too-long (formatter handles this)
    "B008",    # function-call-in-default-argument (FastAPI Query/Depends pattern)
    "B905",    # zip-without-explicit-strict
    "RUF005",  # collection-literal-concatenation (list + list is fine)
    "RUF022",  # unsorted-all (__all__ grouped by category)
    "SIM108",  # if-else-block-instead-of-if-exp (readability preference)
    "SIM105",  # suppressible-exception
    "SIM116",  # if-else-block-instead-of-dict-lookup
]

[tool.ruff.lint.per-file-ignores]
"backend/rest/main.py" = ["E402"]  # load_dotenv() must run before imports
"backend/worker/celery_app.py" = ["E402"]  # load_dotenv() must run before imports
"examples/**/*.py" = ["E402"]  # examples need dotenv/traceroot init before other imports

[tool.ruff.lint.isort]
known-first-party = ["db", "rest", "shared", "worker", "traceroot"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
